[gd_scene load_steps=6 format=3 uid="uid://player001"]

[ext_resource type="Script" path="res://player/player.gd" id="1_player"]
[ext_resource type="Script" path="res://player/player_camera.gd" id="2_camera"]
[ext_resource type="Script" path="res://player/player_input.gd" id="3_input"]
[ext_resource type="Script" path="res://inventory/inventory.gd" id="4_inventory"]
[ext_resource type="Script" path="res://inventory/burn_timer_manager.gd" id="5_burn_timer"]
[ext_resource type="PackedScene" uid="uid://playerhud001" path="res://player/player_hud.tscn" id="6_hud"]
[ext_resource type="Script" path="res://player/heat_system.gd" id="7_heat"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_001"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_001"]
radius = 0.4
height = 1.8

[sub_resource type="SceneReplicationConfig" id="ServerSyncConfig"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:velocity")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:health")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_alive")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("HeatSystem:heat_level")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("HeatSystem:is_fever")
properties/6/spawn = true
properties/6/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="InputSyncConfig"]
properties/0/path = NodePath("PlayerInput:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("PlayerInput:look_yaw")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("PlayerInput:look_pitch")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("PlayerInput:action_jump")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("PlayerInput:action_shoot")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("PlayerInput:action_pickup")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("PlayerInput:action_slot")
properties/6/spawn = true
properties/6/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_001")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_001")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
spring_length = 3.5
collision_mask = 1
script = ExtResource("2_camera")

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("3_input")

[node name="ServerSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("ServerSyncConfig")

[node name="InputSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("InputSyncConfig")

[node name="HeatSystem" type="Node" parent="."]
script = ExtResource("7_heat")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("4_inventory")

[node name="BurnTimerManager" type="Node" parent="."]
script = ExtResource("5_burn_timer")

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="PlayerHUD" parent="HUDLayer" instance=ExtResource("6_hud")]
